--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ marshmallow==3.14.1
 umongo==3.0.1
 requests
 bs4
+git+https://github.com/Joelkb/cinemagoer 
 imdbpy==2022.7.9
 aiohttp
 pytz
@@ -15,7 +16,6 @@ humanize
 aiofiles
 dnspython
 pynewtonmath
-python-dotenv<=0.20.0
 apscheduler
 pyshorteners
 psutil
@@ -30,5 +30,96 @@ loggers
 filetype
 tldextract
 lk21
-Flask==2.2.2
 
+ #---others----# 
+ opencv-python-headless==4.7.0.68 
+ python-dotenv==0.21.1 
+ speedtest==0.0.1 
+ humanize==4.6.0 
+ Pillow==9.4.0 
+ psutil==5.9.4 
+ NumPy 
+ wheel 
+ ujson 
+ wget 
+ aiofiles
+ dnspython==2.3.0
+python-decouple
+ffmpeg-python>=0.2.0
+jinja2
+apscheduler
+pyshorteners
+colorama
+search_engine_parser
+ffmpeg
+youtube-search-python==1.4.6
+youtube-dl
+pyshorteners
+countryinfo
+python-math
+psutil==5.9.4
+speedtest-cli
+python-dotenv
+python-telegram-bot==12.8
+doodstream
+unshortenit
+python-decouple
+ytthumb
+YoutubeTags
+beautifulsoup4
+motor
+python-docx
+speedtest
+yt-dlp
+python-dateutil
+google-generativeai
+datetime>=4.4
+psutil==5.9.4
+asyncio
+chardet
+urllib3
+pycryptodomex
+wheel
+six
+googlesearch-python
+spotipy
+scdl
+tqdm
+ujson
+wget
+spotipy
+pafy
+ffmpeg
+asyncio
+pytube
+youtube-search
+youtube-search-python
+spotdl
+Pillow
+wget
+discord
+moviepy==1.0.3
+shazamio
+PyPDF2
+pypdf
+pyrogram>=2.0.106
+telethon
+sqlalchemy
+SafoneAPI
+gtts
+pydub
+sqlalchemy
+pyfiglet
+jikanpy==4.3.2
+html2text==2024.2.26
+secureme==0.0.4
+gpytranslate
+googletrans
+lexica-api
+SpeechRecognition
+gitpython
+uvloop
+lexica-api
+MukeshAPI
+httpx
+HorridAPI
